--- a/package.json
+++ b/package.json
@@ -22,11 +22,14 @@
   "dependencies": {
     "compression": "^1.6.2",
     "express": "^4.14.0",
+    "moment": "^2.18.1",
+    "moment-timezone": "^0.5.13",
     "object-assign": "^4.1.1",
     "promise": "^7.1.1",
     "prop-types": "^15.5.10",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
+    "react-moment": "^0.4.2",
     "react-redux": "^5.0.4",
     "react-router": "^3.0.0",
     "redbox-react": "^1.3.6",
